--- a/src/component/CurrentCurses/ValuteItem/valuteItem.sass
+++ b/src/component/CurrentCurses/ValuteItem/valuteItem.sass
@@ -1,10 +1,10 @@
 .valute-item
-    background: grey
+    background: white
     display: inline-block
     margin: 10px
     padding: 10px
     border-radius: 5px
-    color: white
+    color: black
 
 .valuteList
     display: grid
