--- a/src/component/ConventorPage/conventerPage.sass
+++ b/src/component/ConventorPage/conventerPage.sass
@@ -3,10 +3,12 @@
 
 .conventer-form
     background: white
+    text-align: center
     color: black
     margin-top: 15px
     height: 350px
     padding: 20px
+    border-radius: 10px
 
 .list-item
     display: none
@@ -54,3 +56,11 @@
     input::-webkit-outer-spin-button,
     input::-webkit-inner-spin-button 
         -webkit-appearance: none
+
+.currentValue-valute
+    display: inline-block
+    margin-bottom: 15px
+    span
+        font-size: 24px
+        font-weight: 800
+        
